added at least some polish

--- a/test.lp.tex
+++ b/test.lp.tex
@@ -8,19 +8,21 @@
 \usepackage{ragged2e}
 \begin{document}
 \begin{flushleft}
+\section{ Überschrift 1 }
+\subsection{ Überschrift 2 }
+\subsubsection{ Überschrift 3 }
 \end{flushleft}
 \center
-\large\textbf{ Überschrift 1 }
+\large\textbf{ Überschrift 4 }
 \normalsize
 \endcenter
 \begin{flushleft}
-\textbf{ Überschrift 2 }\\
-Einleitung
+\textbf{ Überschrift 5 }\\
+
 \begin{align*}
-& a = 2b\\
-& b = 0.5 a\\
+&a = 2b &&\text{  Umformung 1 }\\
+& b = 0.5 a \phi &&\text{\quad}\\
 \end{align*}
 Jaja
-
 \end{flushleft}
 \end{document}
